--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
             <button id="button-ex2" title="Basic example">Ex2</button>
             <button id="button-ex3" title="Nasty example">Ex3</button>
         </div>
-        <div class="header">Results</div>
-        <pre id="results">Your results will appear here.</pre>
+        <div id="resdiv">
+            <div class="subresdiv">
+                <div class="header">Your Results</div>
+                <pre id="results">Your results will appear here.</pre>
+            </div>
+            <div class="subresdiv">
+                <div class="header">My Results</div>
+                <pre id="results2">Your results will appear here.</pre>
+            </div>
+        </div>
     </div>
 </div>
-
+<script type="text/javascript" src="brython.js"></script>
+<script type="text/javascript" src="brython_stdlib.js"></script>
+<script type="text/python" src="sol.py"></script>
 <script>
     (function () {
         let entityMap = {
@@ -39,21 +49,30 @@
 
         function onload() {
             let resultsDiv = document.getElementById('results');
-            resultsDiv.innerHTML = "Click";
+            let resultsDiv2 = document.getElementById('results2');
+            resultsDiv.textContent = "";
+            resultsDiv2.textContent = "";
             let txtArea = document.getElementById('txtarea');
 
             document.getElementById("button-submit").onclick = function () {
-                res = getStats(txtArea.value);
+                let res = getStats(txtArea.value);
                 res = JSON.stringify(res, null, 4);
-                res = escapeHtml(res);
-                resultsDiv.innerHTML = res;
-            }
+//                res = escapeHtml(res);
+//                resultsDiv.innerHTML = res;
+                resultsDiv.textContent = res;
+
+                res = pyStats(txtArea.value);
+                res.__class__ && delete res.__class__;
+                console.log("pyres", res);
+                res = JSON.stringify(res, null, 4);
+                resultsDiv2.textContent = res;
+            };
 
             document.getElementById("button-clear").onclick = function () {
                 txtArea.value = "";
                 txtArea.focus();
                 return false;
-            }
+            };
 
             document.getElementById("button-ex1").onclick = function () {
                 txtArea.value = "Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n" +
@@ -62,7 +81,7 @@
                     "orci quis turpis auctor molestie. Cum sociis natoque penatibus et magnis\n" +
                     "dis parturient montes, nascetur ridiculus mus. Nullam tristique vulputate\n" +
                     "cursus. Sed vulputate ex ac ex congue, sit amet iaculis massa pretium.\n";
-            }
+            };
 
             document.getElementById("button-ex3").onclick = function () {
                 txtArea.value = "" +
@@ -83,13 +102,15 @@
                     "\n" +
                     "wow, this is a nasty example, isn't it?\n" +
                     "Let's add one last line, this one does not have \\n";
-            }
+            };
 
             document.getElementById("button-ex2").onclick = function () {
                 txtArea.value = "word1 word22 word333 word4444 word55555 word4444 word333 word22 word1";
-            }
+            };
+
+            brython();
         }
-        
+
         window.onload = onload();
     })();
 </script>
